# Lifegame

./: CMakeLists.txt  README.md  ttf_to_bin.py  指令.md
src/: arial_ttf.h  main.cpp
